2006-07-28  Gabriel Burt  <gabriel.burt@gmail.com>

	* plugins/SmartPlaylists/Plugin.cs: Add timers for testing speed of
	operations (commented out).  Change playlist watching to work with
	proposed patch to core.

	* plugins/SmartPlaylists/Editor.cs:
	* plugins/SmartPlaylists/SmartPlaylist.cs: Add timers.

	* plugins/SmartPlaylists/SmartPlaylists.mdp: Add Banshee and System.Data
	refs.

2006-07-27  Dominik Meister  <meister@greenmail.ch>

	* plugins/SmartPlaylists/QueryBuilderModel.cs: Set more convenient default
	values when searching in the year column (BGO #348987)

2006-07-23  Dominik Meister  <meister@greenmail.ch>

	* plugins/SmartPlaylists/QueryBuilder.cs:
	* plugins/SmartPlaylists/QueryBuilderModel.cs: Add special equal/not-equal
	operators for strings to support case-insensitive string matches (BGO
	#348366).

2006-07-20  Gabriel Burt  <gabriel.burt@gmail.com>

	* plugins/SmartPlaylist/Plugin.cs: Add Dominik Meister to Authors.

2006-07-20  Gabriel Burt  <gabriel.burt@gmail.com>

	* banshee-official-plugins.mds: Add SmartPlaylits project to MonoDevelop
	solution.

	* plugins/SmartPlaylists/SmartPlaylists.mdp: new project for
	SmartPlaylists plugin.  Still needs references to Banshee libs.

2006-07-20  Dominik Meister  <meister@greenmail.ch>

	* plugins/SmartPlaylists/Plugin.cs: Add menu for creating smart playlist
	from search (BGO #348054).

	* plugins/SmartPlaylists/Editor.cs: Add SetQueryFromSearch method that
	takes the search query the user has entered and converts it into a
	condition statement that the existing smart playlist logic can use.

2006-07-19  Patrick van Staveren  <trick@vanstaveren.us>

	* plugins/Recommendation/RecommendationPane.cs:
	double-escape comma, ampersand, and question mark like we
	do with slashes

2006-07-19  Aaron Bockover  <abock@gnome.org>

	* banshee-official-plugins.mds: Added Podcast project

	* plugins/Recommendation/Recommendation.mdp: Added new files
